--- a/GreekMythCMS/admin/comments/view_comment.html
+++ b/GreekMythCMS/admin/comments/view_comment.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/xampp/htdocs/GreekMythCMS/">
+    <base href="/GreekMythCMS/">
     <link rel="icon" href="src/images/logo_transparent.png">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles/comments.css">
