--- a/GreekMythCMS/admin/groups/view_group.html
+++ b/GreekMythCMS/admin/groups/view_group.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="/GreekMythCMS/">
+    <base href="/finalProject_ITEC116/GreekMythCMS/">
     <link rel="icon" href="src/images/logo_transparent.png">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles/groups.css">
