--- a/GreekMythCMS/auth/register.html
+++ b/GreekMythCMS/auth/register.html
@@ -5,6 +5,7 @@
     <base href="/finalProject_ITEC116/GreekMythCMS/">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles/auth.css">
+    <link rel="icon" href="src/images/logo_transparent.png">
     <title>Register</title>
     <script>
         token = localStorage.getItem('token');
