--- a/GreekMythCMS/auth/login.html
+++ b/GreekMythCMS/auth/login.html
@@ -5,6 +5,7 @@
     <base href="/finalProject_ITEC116/GreekMythCMS/">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles/auth.css">
+    <link rel="icon" href="src/images/logo_transparent.png">
     <title>Login</title>
     <script type="text/javascript" src="components/auth_notification.js"></script>
     <script>
