Added Create Users in API

--- a/GreekMythCMS/navigate/users.html
+++ b/GreekMythCMS/navigate/users.html
@@ -123,11 +123,15 @@
             </tbody>
         </table>
 
-        <div class="pagination-container">
+        <div class="pagination-container" style="display: none;">
             <div class="pagination">
                 <div id="pagination-number"></div>
                 <div class="pagination-users"></div>
             </div>
+        </div>
+
+        <div class="data-options">
+            <button type="button" id="createData" onclick="window.location.href='admin/users/create_user.html'">Create Data</button> 
         </div>
 
         <div class="notification-modal" id="notification-modal">
