--- a/GreekMythCMS/admin/users/create_user.html
+++ b/GreekMythCMS/admin/users/create_user.html
@@ -4,14 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/finalProject_ITEC116/GreekMythCMS/">
     <link rel="icon" href="src/images/logo_transparent.png">
+    <link rel="stylesheet" href="styles/users.css">
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="styles/table.css">
-    <link rel="stylesheet" href="styles/groups.css">
+    <title>Create User</title>
     <script type="text/javascript" src="api/greekmythApi.js" defer></script>
     <script type="text/javascript" src="theme.js" defer></script>
-    <script type="text/javascript" src="components/notification.js" defer></script>
     <script type="text/javascript" src="api/request/api_request.js" defer></script>
-    <title>Groups</title>
+    <script type="text/javascript" src="api/users/create_user.js" defer></script>
 </head>
 <body>
     <header>
@@ -40,9 +39,8 @@
                 <button value="Logout" id="Process">Logout</button>
             </form>
     </nav>
-    <main>
-        <h1 class="title">Groups</h1>
 
+    <main>
         <div class="modal" id="modal">
             <div class="modal-content">
                 <div class="close-container">
@@ -64,16 +62,6 @@
                 <div class="clearfix">
                     <button type="button" id="confirmbtn" class="confirmbtn">Confirm</button>
                     <button type="button" id="cancelbtn" class="cancelbtn">Cancel</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal-change" id="modal-change">
-            <div class="modal-content">
-                <h2 id="confirm-message"></h2>
-                <div class="clearfix">
-                    <button type="button" id="confirmchangebtn" class="confirmbtn">Confirm</button>
-                    <button type="button" id="cancelchangebtn" class="cancelbtn">Cancel</button>
                 </div>
             </div>
         </div>
@@ -104,38 +92,48 @@
             </form>
         </div>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Creator</th>
-                    <th>Image</th>
-                    <th>Status</th>
-                    <th>Options</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td style="width: 100%;" colspan="6"><h1>Loading...</h1></td>
-                </tr>
-            </tbody>
-        </table>
-
-
-        <div class="pagination-container" style="display: none;">
-            <div class="pagination">
-                <div id="pagination-number"></div>
-                <div class="pagination-groups"></div>
-            </div>
+        <div class="form-container">
+            <form class="userForm-create"> 
+            <h1>Create User</h1>
+                <div class="formInput-container">
+                    <div class="input-field">
+                        <label for="usernameCreate">Username</label> 
+                        <input type="text" name="usernameCreate" id="usernameCreate" class="usernameValid" placeholder="Username"> 
+                        <span id="usernameValid"></span>
+                    </div>
+                    <div class="input-field">
+                        <label for="emailCreate">Email</label> 
+                        <input type="text" name="emailCreate" id="emailCreate" placeholder="Email"> 
+                    </div>
+                    <div class="input-field">
+                        <label for="imageCreate">Profile</label> 
+                        <input type="file" name="imageCreate" id="imageCreate" placeholder="Profile"> 
+                    </div>
+                    <div class="input-field">
+                        <label for="bioCreate">Bio</label> 
+                        <input type="text" name="bioCreate" id="bioCreate" placeholder="Bio"> 
+                    </div>
+                    <div class="input-field">
+                        <label for="passwordCreate">Password</label>
+                        <input type="password" name="passwordCreate" id="passwordCreate" placeholder="Password">
+                        <span id="passwordValid"></span>
+                    </div>
+                    <div class="input-field">
+                        <label for="confirmpasswordCreate">Confirm Password</label>
+                        <input type="password" name="confirmpasswordCreate" id="confirmpasswordCreate" placeholder="Confirm Password">
+                    </div>
+                    
+                    <div class="edit-options-container">
+                        <div class="edit-options">
+                            <button type="button" id="Create">Create User</button> 
+                            <button type="button" id="Cancel">Cancel</button>
+                        </div>
+                    </div>
+                    <span id="status" name="status"></span>
+                </div>
+            </form>
         </div>
-
-        <div class="notification-modal" id="notification-modal">
-            <div class="modal-content" id="modal-content"></div>
-        </div>
-
     </main>
-    
     <script type="text/javascript" src="api/auth/logout.js" defer></script>
     <script type="text/javascript" src="api/admin/delete_account.js" defer></script>
     <script type="text/javascript" src="api/field_check/greekMythApiFieldErrors.js" defer></script>
