--- a/GreekMythCMS/navigate/comments.html
+++ b/GreekMythCMS/navigate/comments.html
@@ -125,7 +125,7 @@
             </tbody>
         </table>
         
-        <div class="pagination-container">
+        <div class="pagination-container" style="display: none;">
             <div class="pagination">
                 <div id="pagination-number"></div>
                 <div class="pagination-comments"></div>
