--- a/GreekMythCMS/navigate/posts.html
+++ b/GreekMythCMS/navigate/posts.html
@@ -124,7 +124,7 @@
             </tbody>
         </table>
 
-        <div class="pagination-container">
+        <div class="pagination-container" style="display: none;">
             <div class="pagination">
                 <div id="pagination-number"></div>
                 <div class="pagination-posts"></div>
