Added Create Posts in API

--- a/GreekMythCMS/admin/users/create_user.html
+++ b/GreekMythCMS/admin/users/create_user.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="input-field">
                         <label for="bioCreate">Bio</label> 
-                        <input type="text" name="bioCreate" id="bioCreate" placeholder="Bio"> 
+                        <textarea name="bioCreate" id="bioCreate" cols="30" rows="5" placeholder="Write something about yourself..."></textarea>
                     </div>
                     <div class="input-field">
                         <label for="passwordCreate">Password</label>
@@ -126,7 +126,7 @@
                     <div class="edit-options-container">
                         <div class="edit-options">
                             <button type="button" id="Create">Create User</button> 
-                            <button type="button" id="Cancel">Cancel</button>
+                            <button type="button" id="CancelCreate">Cancel</button>
                         </div>
                     </div>
                     <span id="status" name="status"></span>
