--- a/GreekMythCMS/admin/groups/create_group.html
+++ b/GreekMythCMS/admin/groups/create_group.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="edit-options-container">
                         <div class="edit-options">
-                            <button type="button" id="Create">Create Post</button> 
+                            <button type="button" id="Create">Create Group</button> 
                             <button type="button" id="CancelCreate">Cancel</button>
                         </div>
                     </div>
