Fixed Styling in Icons in Dashboard

--- a/GreekMythCMS/index.html
+++ b/GreekMythCMS/index.html
@@ -98,7 +98,7 @@
                 <div class="data-name">
                     <a href="navigate/users.html">
                         <h1>Users</h1>
-                        <img src="src/ui/icons8-user-60.png" alt="user"/>
+                        <img src="src/ui/icons8-user-60.png" alt="user" id="user-icon"/>
                     </a>
                 </div>
                 <h2 id="totalUsers">Loading...</h2>
@@ -107,7 +107,7 @@
                 <div class="data-name">
                     <a href="navigate/posts.html">
                         <h1>Posts</h1>
-                        <img src="src/ui/icons8-post-64.png" alt="post">
+                        <img src="src/ui/icons8-post-64.png" alt="post" id="post-icon"/>
                     </a>
                 </div>
                 <h2 id="totalPosts">Loading...</h2>
@@ -116,7 +116,7 @@
                 <div class="data-name">
                     <a href="navigate/groups.html">
                         <h1>Groups</h1>
-                        <img src="src/ui/icons8-group-64.png" alt="group">
+                        <img src="src/ui/icons8-group-64.png" alt="group" id="group-icon"/>
                     </a>
                 </div>      
                 <h2 id="totalGroups">Loading...</h2>
@@ -125,7 +125,7 @@
                 <div class="data-name">
                     <a href="navigate/comments.html">
                         <h1>Comments</h1>
-                        <img src="src/ui/icons8-comment-50.png" alt="comment">
+                        <img src="src/ui/icons8-comment-50.png" alt="comment" id="comment-icon">
                     </a>
                 </div>
                 <h2 id="totalComments">Loading...</h2>
